// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Storyshots Components/Modal Borrow Modal 1`] = `
<div
  style={
    Object {
      "padding": "2rem",
    }
  }
>
  <div
    className="sc-bBrHrO kfhXhC"
  >
    <div
      className="o-center-layout sc-crXcEl sc-ivTmOn TBZtj frqDXP"
    >
      <button
        appearance="text"
        className="sc-hKMtZM sc-papXJ jKfTjM ltXRM sc-cxabCf kRshnx u-fit-content-width"
        data-element="button"
        icon="close"
        size="medium"
        variant="medium"
      />
      <div
        className="sc-evZas gpoJlf"
        gap={5}
      >
        <div
          className="sc-evZas fQdIpY"
        >
          <div
            className="sc-gicCDI gacmSU"
            data-element="tableWrapper"
          >
            <table
              className="sc-ezWOiH bKPCrK"
              data-element="table"
            >
              <thead
                className="sc-cCsOjp ffUHXz"
              >
                <tr>
                  <td
                    className="sc-jdAMXn kOKHzJ"
                    colSpan={2}
                  >
                    <h2
                      className="sc-fEOsli dMYQOn c-text--heading-2 c-text--color-oxfordBlue"
                    >
                      Borrow asset
                    </h2>
                  </td>
                </tr>
                <tr>
                  <td
                    className="sc-ikZpkk sc-jIZahH esEZlH iVsiNu"
                  >
                    <div
                      className="sc-bZkfAO sc-kLLXSd ftgqdL bmhxgA"
                    >
                      Amount
                    </div>
                  </td>
                </tr>
              </thead>
              <tbody>
                <tr>
                  <td
                    className="sc-ikZpkk esEZlH"
                  >
                    <div
                      className="sc-breuTD gkAgNQ"
                    >
                      <div
                        className="sc-bczRLJ ekBFnZ"
                      >
                        <div
                          className="sc-gsnTZi bhsjPj"
                        >
                          <input
                            disabled={false}
                            type="text"
                          />
                        </div>
                        
                      </div>
                      <button
                        appearance="secondary"
                        className="sc-hKMtZM sc-jSMfEi ivRYUu ioWRiD u-fit-content-width"
                        data-element="button"
                        size="small"
                        variant="thin"
                      >
                        MAX
                      </button>
                    </div>
                  </td>
                  <td
                    className="sc-ikZpkk fUlxrs"
                  >
                    <span>
                      ETH
                    </span>
                  </td>
                </tr>
              </tbody>
            </table>
          </div>
          <div
            className="sc-gicCDI gacmSU"
            data-element="tableWrapper"
          >
            <table
              className="sc-ezWOiH bKPCrK"
              data-element="table"
            >
              <thead
                className="sc-cCsOjp ffUHXz"
              >
                
                
                <tr>
                  <td
                    className="sc-ikZpkk sc-jIZahH eBnfKk hohZkz"
                  >
                    <div
                      className="sc-bZkfAO sc-kLLXSd ftgqdL bmhxgA"
                    >
                      Transaction overview
                    </div>
                  </td>
                </tr>
              </thead>
              <tbody>
                <tr>
                  <td
                    className="sc-ikZpkk eBnfKk"
                  >
                    <p
                      className="sc-fEOsli fqiSQU c-text--body-3 c-text--color-oxfordBlue"
                    >
                      Health factor
                    </p>
                  </td>
                  <td
                    className="sc-ikZpkk TFJjn"
                  >
                    <div
                      className="sc-evZas fQdIpY"
                    >
                      <div
                        className="sc-breuTD gkAgNQ sc-hTtwUo ejdmSw"
                      >
                        <span
                          className="sc-fEOsli cVcOth"
                          color="oxfordBlue"
                          type="body 1"
                        >
                          1,00
                        </span>
                      </div>
                      <span
                        className="sc-fEOsli cVcOth"
                        color="oxfordBlue"
                        type="body 1"
                      >
                        Liquidation at &lt; 1.00
                      </span>
                    </div>
                  </td>
                </tr>
              </tbody>
            </table>
          </div>
        </div>
        <div
          className="sc-kDDrLX bOqWok"
          gap={1.875}
        >
          <div
            className="sc-evZas cMVNHr"
            gap={1}
          >
            <button
              appearance="dark"
              className="sc-hKMtZM sc-gKXOVf iOviQP llhpmf u-full-width"
              data-element="button"
              size="large"
              variant="large"
            >
              Borrow asset
            </button>
          </div>
        </div>
      </div>
    </div>
  </div>
</div>
`;

exports[`Storyshots Components/Modal Deposit Modal 1`] = `
<div
  style={
    Object {
      "padding": "2rem",
    }
  }
>
  <div
    className="sc-bBrHrO kfhXhC"
  >
    <div
      className="o-center-layout sc-crXcEl sc-ivTmOn TBZtj frqDXP"
    >
      <button
        appearance="text"
        className="sc-hKMtZM sc-papXJ jKfTjM ltXRM sc-cxabCf kRshnx u-fit-content-width"
        data-element="button"
        icon="close"
        size="medium"
        variant="medium"
      />
      <div
        className="sc-evZas gpoJlf"
        gap={5}
      >
        <div
          className="sc-evZas fQdIpY"
        >
          <div
            className="sc-gicCDI gacmSU"
            data-element="tableWrapper"
          >
            <table
              className="sc-ezWOiH bKPCrK"
              data-element="table"
            >
              <thead
                className="sc-cCsOjp ffUHXz"
              >
                <tr>
                  <td
                    className="sc-jdAMXn kOKHzJ"
                    colSpan={2}
                  >
                    <h2
                      className="sc-fEOsli dMYQOn c-text--heading-2 c-text--color-oxfordBlue"
                    >
                      Deposit asset
                    </h2>
                  </td>
                </tr>
                <tr>
                  <td
                    className="sc-ikZpkk sc-jIZahH esEZlH iVsiNu"
                  >
                    <div
                      className="sc-bZkfAO sc-kLLXSd ftgqdL bmhxgA"
                    >
                      Amount
                    </div>
                  </td>
                </tr>
              </thead>
              <tbody>
                <tr>
                  <td
                    className="sc-ikZpkk esEZlH"
                  >
                    <div
                      className="sc-breuTD gkAgNQ"
                    >
                      <div
                        className="sc-bczRLJ ekBFnZ"
                      >
                        <div
                          className="sc-gsnTZi bhsjPj"
                        >
                          <input
                            disabled={false}
                            type="text"
                          />
                        </div>
                        
                      </div>
                      <button
                        appearance="secondary"
                        className="sc-hKMtZM sc-jSMfEi ivRYUu ioWRiD u-fit-content-width"
                        data-element="button"
                        size="small"
                        variant="thin"
                      >
                        MAX
                      </button>
                    </div>
                  </td>
                  <td
                    className="sc-ikZpkk fUlxrs"
                  >
                    <span>
                      ETH
                    </span>
                  </td>
                </tr>
              </tbody>
            </table>
          </div>
          <div
            className="sc-kDDrLX bOqWok"
            gap={1.875}
          >
            <div
              className="sc-breuTD hPteRQ"
            >
              <p
                className="sc-fEOsli jCQRNG c-text--body-2"
              >
                Collaterization
              </p>
              <div
                className="sc-iTONeN fVhXQT rts-toggle__container undefined"
                data-element="toggle"
                height={25}
                width={50}
              >
                <input
                  className="sc-efBctP iJKBRO rts-toggle__toggle"
                  data-element="toggle-input"
                  type="checkbox"
                />
                <span
                  className="sc-iAvgwm ZhnSP rts-toggle__background"
                  data-element="toggle-background"
                  height={25}
                />
              </div>
            </div>
          </div>
        </div>
        <div
          className="sc-kDDrLX bOqWok"
          gap={1.875}
        >
          <div
            className="sc-evZas cMVNHr"
            gap={1}
          >
            <button
              appearance="dark"
              className="sc-hKMtZM sc-gKXOVf iOviQP llhpmf u-full-width"
              data-element="button"
              size="large"
              variant="large"
            >
              Approve to conitinue
            </button>
            <button
              appearance="secondary"
              className="sc-hKMtZM sc-jSMfEi bEgYQW ioWRiD u-full-width"
              data-element="button"
              disabled={true}
              size="large"
              variant="large"
            >
              Deposit ETH
            </button>
          </div>
        </div>
      </div>
    </div>
  </div>
</div>
`;

exports[`Storyshots Components/Modal Modal Example 1`] = `
<div
  style={
    Object {
      "padding": "2rem",
    }
  }
>
  <button
    appearance="primary"
    className="sc-hKMtZM sc-eCYdqJ kiXBJA jriGrI"
    data-element="button"
    onClick={[Function]}
    size="medium"
    variant="medium"
  >
    Open Modal
  </button>
</div>
`;

exports[`Storyshots Components/Modal Repay Modal 1`] = `
<div
  style={
    Object {
      "padding": "2rem",
    }
  }
>
  <div
    className="sc-bBrHrO kfhXhC"
  >
    <div
      className="o-center-layout sc-crXcEl sc-ivTmOn TBZtj frqDXP"
    >
      <button
        appearance="text"
        className="sc-hKMtZM sc-papXJ jKfTjM ltXRM sc-cxabCf kRshnx u-fit-content-width"
        data-element="button"
        icon="close"
        size="medium"
        variant="medium"
      />
      <div
        className="sc-evZas gpoJlf"
        gap={5}
      >
        <div
          className="sc-evZas fQdIpY"
        >
          <div
            className="sc-gicCDI gacmSU"
            data-element="tableWrapper"
          >
            <table
              className="sc-ezWOiH bKPCrK"
              data-element="table"
            >
              <thead
                className="sc-cCsOjp ffUHXz"
              >
                <tr>
                  <td
                    className="sc-jdAMXn kOKHzJ"
                    colSpan={2}
                  >
                    <h2
                      className="sc-fEOsli dMYQOn c-text--heading-2 c-text--color-oxfordBlue"
                    >
                      Repay asset
                    </h2>
                  </td>
                </tr>
                <tr>
                  <td
                    className="sc-ikZpkk sc-jIZahH esEZlH iVsiNu"
                  >
                    <div
                      className="sc-bZkfAO sc-kLLXSd ftgqdL bmhxgA"
                    >
                      Amount
                    </div>
                  </td>
                </tr>
              </thead>
              <tbody>
                <tr>
                  <td
                    className="sc-ikZpkk esEZlH"
                  >
                    <div
                      className="sc-breuTD gkAgNQ"
                    >
                      <div
                        className="sc-bczRLJ ekBFnZ"
                      >
                        <div
                          className="sc-gsnTZi bhsjPj"
                        >
                          <input
                            disabled={false}
                            type="text"
                          />
                        </div>
                        
                      </div>
                      <button
                        appearance="secondary"
                        className="sc-hKMtZM sc-jSMfEi ivRYUu ioWRiD u-fit-content-width"
                        data-element="button"
                        size="small"
                        variant="thin"
                      >
                        MAX
                      </button>
                    </div>
                  </td>
                  <td
                    className="sc-ikZpkk fUlxrs"
                  >
                    <span>
                      ETH
                    </span>
                  </td>
                </tr>
              </tbody>
            </table>
          </div>
          <div
            className="sc-gicCDI gacmSU"
            data-element="tableWrapper"
          >
            <table
              className="sc-ezWOiH bKPCrK"
              data-element="table"
            >
              <thead
                className="sc-cCsOjp ffUHXz"
              >
                
                
                <tr>
                  <td
                    className="sc-ikZpkk sc-jIZahH eBnfKk hohZkz"
                  >
                    <div
                      className="sc-bZkfAO sc-kLLXSd ftgqdL bmhxgA"
                    >
                      Transaction overview
                    </div>
                  </td>
                </tr>
              </thead>
              <tbody>
                <tr>
                  <td
                    className="sc-ikZpkk eBnfKk"
                  >
                    <span
                      className="sc-fEOsli fqiSQU"
                      color="oxfordBlue"
                      type="body 3"
                    >
                      Remaining debt
                    </span>
                  </td>
                  <td
                    className="sc-ikZpkk TFJjn"
                  >
                    <div
                      className="sc-evZas fQdIpY"
                    >
                      <div
                        className="sc-breuTD gkAgNQ sc-hTtwUo ejdmSw"
                      >
                        <span
                          className="sc-fEOsli cVcOth"
                          color="oxfordBlue"
                          type="body 1"
                        >
                          1.00 Asset
                        </span>
                        <span
                          className="sc-fEOsli cVcOth"
                          color="oxfordBlue"
                          type="body 1"
                        >
                          0.000001 Asset
                        </span>
                      </div>
                      <span
                        className="sc-fEOsli cVcOth"
                        color="oxfordBlue"
                        type="body 1"
                      >
                        Liquidation at &lt; 1.00
                      </span>
                    </div>
                  </td>
                </tr>
                <tr>
                  <td
                    className="sc-ikZpkk eBnfKk"
                  >
                    <span
                      className="sc-fEOsli fqiSQU"
                      color="oxfordBlue"
                      type="body 3"
                    >
                      Health factor
                    </span>
                  </td>
                  <td
                    className="sc-ikZpkk TFJjn"
                  >
                    <div
                      className="sc-evZas fQdIpY"
                    >
                      <div
                        className="sc-breuTD gkAgNQ sc-hTtwUo ejdmSw"
                      >
                        <span
                          className="sc-fEOsli cVcOth"
                          color="oxfordBlue"
                          type="body 1"
                        >
                          1.00
                        </span>
                      </div>
                      <span
                        className="sc-fEOsli cVcOth"
                        color="oxfordBlue"
                        type="body 1"
                      >
                        Liquidation at &lt; 1.00
                      </span>
                    </div>
                  </td>
                </tr>
              </tbody>
            </table>
          </div>
        </div>
        <div
          className="sc-kDDrLX bOqWok"
          gap={1.875}
        >
          <div
            className="sc-evZas cMVNHr"
            gap={1}
          >
            <button
              appearance="dark"
              className="sc-hKMtZM sc-gKXOVf iOviQP llhpmf u-full-width"
              data-element="button"
              size="large"
              variant="large"
            >
              Repay asset
            </button>
          </div>
        </div>
      </div>
    </div>
  </div>
</div>
`;
